Title size fore responsive view

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </div>
                         <div class="menuUsItem pull-right">
                             <div class="timetable_area">
-                                <span class="">Сб - Вс: </strong>9:00 - 15:00</span>
+                                <span class=""><strong>Сб - Вс: </strong>9:00 - 15:00</span>
                             </div>
                         </div>
                     </div>
@@ -75,8 +75,8 @@
                         <div class="search" title="Open/close search form">
                             <div class="searchForm">
                                 <form role="search" method="get" class="search-form" action="#">
-                                    <input type="text" class="searchField" placeholder="" value="" name="s" title="Search for:">
-                                    <button type="submit" class="searchSubmit" title="Start search"><span class="icoSearch"></span></button>
+                                    <input type="text" class="searchField" placeholder="" value="" name="s" title="Найти:">
+                                    <button type="submit" class="searchSubmit" title="Искать"><span class="icoSearch"></span></button>
                                 </form>
                             </div>
                             <div class="ajaxSearchResults"></div>
@@ -85,24 +85,24 @@
                         <nav id="mainmenu_wrapper" class="menuTopWrap topMenuStyleLine text-center">
                             <ul id="mainmenu" class="nav sf-menu inited ">
                                 <li class="menu-item-has-children custom_view_item current-menu-item">
-                                    <a href="#">Home <span class="caret"></span></a>
+                                    <a href="#">Главная <span class="caret"></span></a>
                                     <ul class="sub-menu fadeInUp animated">
                                         <li class="menu-item current-menu-item">
-                                            <a href="index.html">Homepage</a>
+                                            <a href="index.html">Главная</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="home-page-2.html">Home Page 2</a>
+                                            <a href="home-page-2.html">Главная 2</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="home-page-3.html">Home Page 3</a>
+                                            <a href="home-page-3.html">Главная 3</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="menu-item-type-custom menu-item-has-children">
-                                    <a href="#" >Pages <span class="caret"></span></a>
+                                    <a href="#" >Интересное <span class="caret"></span></a>
                                     <ul class="sub-menu fadeInUp animated">
                                         <li class="menu-item">
-                                            <a href="about.html">About</a>
+                                            <a href="about.html">О нас</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="shortcodes.html">Shortcodes</a>
@@ -119,27 +119,27 @@
                                     </ul>
                                 </li>
                                 <li class="menu-item-type-custom">
-                                    <a href="services.html">Services</a>
+                                    <a href="services.html">Направления</a>
                                 </li>
                                 <li class="menu-item-type-custom menu-item-has-children">
                                     <a href="#">Team <span class="caret"></span></a>
                                     <ul class="sub-menu fadeInUp animated">
                                         <li class="menu-item">
-                                            <a href="team.html">Team Members</a>
+                                            <a href="team.html">Наши мастера</a>
                                         </li>
                                         <li class="menu-item">
-                                            <a href="dr-marta-green.html">Dr. Marta Green</a>
+                                            <a href="dr-marta-green.html">Ответственный</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="menu-item-type-custom">
-                                    <a href="gallery.html" class="">Gallery</a>
+                                    <a href="gallery.html" class="">Галерея</a>
                                 </li>
                                 <li class="menu-item-type-custom menu-item-has-children">
-                                    <a href="#">Blog <span class="caret"></span></a>
+                                    <a href="#">Блог<span class="caret"></span></a>
                                     <ul class="sub-menu fadeInUp animated">
                                         <li class="menu-item">
-                                            <a href="blog.html">Blog</a>
+                                            <a href="blog.html">Блог</a>
                                         </li>
                                         <li class="menu-item">
                                             <a href="masonry.html">Masonry</a>
@@ -150,7 +150,7 @@
                                     <a href="appointment.html">Appointment</a>
                                 </li>
                                 <li class="menu-item-type-custom">
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
